--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -15,7 +15,10 @@
 	></app-alert>
 
 	<!-- Register form -->
-	<h2>Register</h2>
+	<h2>
+		<i class="fas fa-user-plus"></i>
+		Register
+	</h2>
 	<hr>
 	<div class="form-group">
 		<label for="email">E-mail</label>
@@ -45,15 +48,9 @@
 		>
 	</div>
 	<button
-		class="btn btn-success mr-2"
+		class="btn btn-success mt-2"
 		(click)="register()"
 	>
 		Register
-	</button>
-	<button
-		class="btn btn-info"
-		(click)="toggleForm()"
-	>
-		Back to login
 	</button>
 </form>
