--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 // Boxicons
 @import "../node_modules/boxicons/css/boxicons.min.css";
 
+// Font Awesome
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
+
 // Fonts
 @font-face {
 	font-family: "Lato";
