:pencil: Login/register routes separation + animations module import

--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -22,7 +22,12 @@
 			formControlName="password"
 		>
 	</div>
-	<button class="btn btn-success mt-2">
-		Login
-	</button>
+	<div class="mt-2">
+		<button class="btn btn-success">
+			Login
+		</button>
+	</div>
+	<div class="mt-2">
+		<a routerLink="/auth/register">You don't have an account?</a>
+	</div>
 </form>
