--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -60,8 +60,12 @@
 					<div class="dropdown-divider"></div>
 					<a
 						class="dropdown-item"
-						routerLink="/auth"
-					>Auth</a>
+						routerLink="/auth/login"
+					>Login</a>
+					<a
+						class="dropdown-item"
+						routerLink="/auth/register"
+					>Register</a>
 				</div>
 			</li>
 		</ul>
