--- a/src/app/views/auth/auth.component.html
+++ b/src/app/views/auth/auth.component.html
@@ -1,16 +1,9 @@
 <div>
 	<div class="row pt-5">
-		<div class="col-3 ml-auto">
+		<div class="col-3 mx-auto">
 			<div class="form-box card shadow">
 				<div class="card-body">
-					<app-auth-login></app-auth-login>
-				</div>
-			</div>
-		</div>
-		<div class="col-3 mr-auto">
-			<div class="form-box card shadow">
-				<div class="card-body">
-					<app-auth-register (message)="setMessage($event)"></app-auth-register>
+					<router-outlet></router-outlet>
 				</div>
 			</div>
 		</div>
