--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -1,42 +1,48 @@
 <form [formGroup]="registerForm">
-
-	<!-- Register form -->
-	<h2>
-		<i class="fas fa-user-plus"></i>
-		Register
-	</h2>
-	<hr>
-	<div class="form-group">
-		<label for="email">E-mail</label>
-		<input
-			id="email"
-			type="text"
-			class="form-control"
-			formControlName="email"
-		>
+	<div class="form`">
+		<!-- Register form -->
+		<h2>
+			<i class="fas fa-user-plus"></i>
+			Register
+		</h2>
+		<hr>
+		<div class="form-group">
+			<label for="email">E-mail</label>
+			<input
+				id="email"
+				type="text"
+				class="form-control"
+				formControlName="email"
+			>
+		</div>
+		<div class="form-group">
+			<label for="login">Login</label>
+			<input
+				id="login"
+				type="text"
+				class="form-control"
+				formControlName="login"
+			>
+		</div>
+		<div class="form-group">
+			<label for="password">Password</label>
+			<input
+				id="password"
+				type="password"
+				class="form-control"
+				formControlName="plainPassword"
+			>
+		</div>
+		<div class="mt-2">
+			<button
+				class="btn btn-success"
+				(click)="register()"
+			>
+				Register
+			</button>
+		</div>
+		<div class="mt-2">
+			<a routerLink="/auth/login">Already have an acount</a>
+		</div>
 	</div>
-	<div class="form-group">
-		<label for="login">Login</label>
-		<input
-			id="login"
-			type="text"
-			class="form-control"
-			formControlName="login"
-		>
-	</div>
-	<div class="form-group">
-		<label for="password">Password</label>
-		<input
-			id="password"
-			type="password"
-			class="form-control"
-			formControlName="plainPassword"
-		>
-	</div>
-	<button
-		class="btn btn-success mt-2"
-		(click)="register()"
-	>
-		Register
-	</button>
 </form>
