--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -1,48 +1,50 @@
 <form [formGroup]="registerForm">
-	<div class="form`">
-		<!-- Register form -->
-		<h2>
-			<i class="fas fa-user-plus"></i>
-			Register
-		</h2>
-		<hr>
-		<div class="form-group">
-			<label for="email">E-mail</label>
-			<input
-				id="email"
-				type="text"
-				class="form-control"
-				formControlName="email"
-			>
-		</div>
-		<div class="form-group">
-			<label for="login">Login</label>
-			<input
-				id="login"
-				type="text"
-				class="form-control"
-				formControlName="login"
-			>
-		</div>
-		<div class="form-group">
-			<label for="password">Password</label>
-			<input
-				id="password"
-				type="password"
-				class="form-control"
-				formControlName="plainPassword"
-			>
-		</div>
-		<div class="mt-2">
-			<button
-				class="btn btn-success"
-				(click)="register()"
-			>
-				Register
-			</button>
-		</div>
-		<div class="mt-2">
-			<a routerLink="/auth/login">Already have an acount</a>
-		</div>
+	<div class="form-group">
+		<label for="email">E-mail</label>
+		<input
+			id="email"
+			type="text"
+			class="form-control"
+			formControlName="email"
+			placeholder="yourmail@example.com"
+		>
+	</div>
+	<div class="form-group">
+		<label for="login">Login</label>
+		<input
+			id="login"
+			type="text"
+			class="form-control"
+			formControlName="login"
+			placeholder="yourlogin"
+		>
+	</div>
+	<div class="form-group">
+		<label for="password">Password</label>
+		<input
+			id="password"
+			type="password"
+			class="form-control"
+			formControlName="plainPassword"
+		>
+	</div>
+	<div class="form-group">
+		<label for="password-confirm">Confirm password</label>
+		<input
+			id="password-confirm"
+			type="password"
+			class="form-control"
+		>
+	</div>
+	<div class="mt-4">
+		<button
+			class="btn btn-primary btn-lg px-5"
+			(click)="register()"
+		>
+			Register account
+		</button>
+	</div>
+	<div class="mt-2">
+		<a routerLink="/auth/login">Already have an acount</a>
 	</div>
 </form>
