--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -37,7 +37,7 @@
 			pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
 			formControlName="plainPassword"
 		>
-		<small>8-32 characters, must contain one big letter and one number</small>
+		<small>8-32 characters, one big letter and one number</small>
 	</div>
 	<div class="form-group">
 		<label for="password-confirm">Confirm password</label>
