--- a/src/app/views/home-page/home-page.component.html
+++ b/src/app/views/home-page/home-page.component.html
@@ -1,5 +1,29 @@
-<div>
-	<h1>
-		Home Page
-	</h1>
+<div class="p-5">
+	<p class="h1">
+		TMM-WEB
+		<small>v{{appVersion}}</small>
+	</p>
+	<hr>
+
+	<a
+		class="d-block"
+		routerLink="/"
+	>Home</a>
+	<a
+		class="d-block"
+		routerLink="/auth/register"
+	>Register</a>
+	<a
+		class="d-block"
+		routerLink="/auth/login"
+	>Login</a>
+	<a
+		class="d-block"
+		routerLink="/user/dashboard"
+	>User dashboard</a>
+	<a
+		class="d-block"
+		routerLink="/about"
+	>About</a>
+
 </div>
