:sparkles: alerts + alerts service

--- a/src/app/views/auth/auth.component.html
+++ b/src/app/views/auth/auth.component.html
@@ -19,6 +19,7 @@
 			<p>
 				Join the fastest growing amature e-sport league
 			</p>
+			<app-alert></app-alert>
 			<div class="form">
 				<router-outlet></router-outlet>
 			</div>
