--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,11 @@ $info: #31add6;
 // <a> color
 $link-color: #dee4e7;
 
+// Alerts
+$alert-bg-level: 2;
+$alert-border-level: 3;
+$alert-color-level: -9;
+
 // Inputs
 $input-bg: transparent;
 $input-color: $light;
