Revert "TMM-39 Basic routing, register functionality and login functionality with route guard (#5)"
This reverts commit 84b3d047de1772fb90922c44bebacb848cb2a672.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,145 +1,1 @@
-// Bootstrap 4 - CONFIGURATION
-
-// Radius
-$enable-rounded: false;
-$enable-shadows: true;
-
-$dark: #222831;
-$light: #eeeeeee4;
-$accent: #d65a31;
-
-$primary: #d65a31;
-$success: #31d65a;
-$danger: #bb1c03;
-$warning: #edaf13;
-$info: #31add6;
-
-// <a> color
-$link-color: #dee4e7;
-
-// Alerts
-$alert-bg-level: 2;
-$alert-border-level: 3;
-$alert-color-level: -9;
-
-// Inputs
-$input-bg: transparent;
-$input-color: $light;
-$input-border-color: rgba(255, 255, 255, 0.5);
-$input-btn-border-width: 2px;
-$input-box-shadow: none;
-$input-focus-border-color: $primary;
-$input-padding-x: 0;
-$input-padding-y: 0.25rem;
-$form-group-margin-bottom: 1.25rem;
-.form-control {
-	border-width: 0 0 $input-btn-border-width 0 !important;
-	transition: 0.3s all !important;
-}
-.form-group {
-	position: relative;
-	label {
-		transition: 0.3s all;
-		position: absolute;
-		top: 0.25rem;
-		cursor: text;
-		color: rgba(255, 255, 255, 0.5);
-		&[has-content] {
-			top: -0.55rem;
-			font-size: 0.7rem;
-			color: #ffffff42;
-		}
-		&[focus] {
-			color: $primary !important;
-		}
-		&[invalid] {
-			color: $danger !important;
-			animation: headShake 1s;
-			animation-delay: 0.3s;
-		}
-		&[valid] {
-			color: $success !important;
-		}
-	}
-	.form-control {
-		transition: 0.3s all;
-		&::placeholder {
-			transition: 0.2s all;
-			opacity: 0;
-		}
-		&:focus {
-			&::placeholder {
-				opacity: 1;
-			}
-			&.ng-valid {
-				border-color: $success !important;
-			}
-		}
-		// Invalid value
-		&.ng-touched.ng-invalid {
-			border-color: $danger !important;
-		}
-	}
-}
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-
-// Boxicons
-@import "../node_modules/boxicons/css/boxicons.min.css";
-
-// Font Awesome
-@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
-
-// Animate.css
-@import "../node_modules/animate.css/animate.min.css";
-
-// Fonts
-@font-face {
-	font-family: "Lato";
-	src: url("./assets/fonts/Lato/Lato-Regular.ttf");
-}
-@import url("https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap");
-
-// Global SCSS
-* {
-	font-family: "Exo 2";
-	color: $light;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-family: "Bebas Neue";
-	* {
-		font-family: "Bebas Neue";
-	}
-}
-hr {
-	background-color: $light;
-	height: 2px;
-}
-
-// BROWSER AUTOCOMPLETE
-@-webkit-keyframes autofill {
-	to {
-		color: white;
-		background: transparent;
-	}
-}
-@keyframes autofill {
-	to {
-		color: white;
-		background: transparent;
-	}
-}
-input:-webkit-autofill {
-	-webkit-animation-name: autofill;
-	animation-name: autofill;
-	-webkit-animation-fill-mode: both;
-	animation-fill-mode: both;
-}
-.md-form > input[type]:-webkit-autofill:not(.browser-default):not([type="search"]) + label {
-	transform: translateY(-14px);
-}
+/* You can add global styles to this file, and also import other style files */
